--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   				<i class="fa-sharp fa-solid fa-code"></i>
   				<h2>Web Design</h2>
   				<p>
-  					Transforming digital visions into seamless web experiences. Whether you're building from scratch or revamping your site, I offer innovative, user-friendly solutions. Explore my portfolio to see how we can bring your online presence to life.
+					Art and science of creating engaging and functional websites. It involves a blend of visual aesthetics, user experience (UX) principles, and technical coding skills.
   				</p>
   				<a href="https://www.google.com">Learn More</a>
   			</div>
@@ -101,17 +101,17 @@
   				<i class="fa-sharp fa-solid fa-crop-simple"></i>
   				<h2>UI/UX Design</h2>
   				<p>
-  					Transforming digital visions into seamless web experiences. Whether you're building from scratch or revamping your site, I offer innovative, user-friendly solut/Portfolio 
-  				</p>
+					It is about creating digital products that are not only functional but also delightful to use.UX focus on the user's journey while UI design focuses on the visual elements and interactive components of a product.
+				</p>
   				<a href="#">Learn More</a>
   			</div>
   			<div>		
   			
   				<i class="fa-brands fa-app-store"></i>
   				<h2>App Design</h2>
-  				<p>
-  					Transforming digital visions into seamless web experiences. Whether you're building from scratch or revamping your site, I offer innovative, user-friendly solutions. Explore my portfolio to see how we can bring your online presence to life.
-  				</p>
+				<p>
+					It involves crafting mobile applications that are not only functional but also provide a seamless and engaging experience for users by customizing the user interface (UI) and user experience (UX).
+				</p>
   				<a href="#">Learn More</a>
   			</div>
   		</div>
