--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
 				</div>
 				<div class="tabs-contents" id="experience">
 					<ul>
-						<li><span>Experience 1</span> <br /> Some Experience Details</li>
-						<li><span>Experience 2</span> <br /> More Experience Details</li>
-						<li><span>Experience 3</span> <br /> Even More Experience Details</li>
+						<li><span>Front-end Development </span> <br /> Proficient in creating website layouts, styling elements, and adding interactive features.</li>
+						<li><span>Version Control (Git and GitHub)</span> <br />Proficiency in Git for managing code changes and collaborating with teams.</li>
+						<li><span>Responsive Web Design</span>/> <br /> This ensure websites function seamlessly across various devices.</li>
+						<li><span>Front-end Frameworks </span> Frameworks like React, Angular are valuable for building complex user interfaces.</li>
+						<li><span>Problem Solving</span><br/> The ability to analyze problems, and create effective solutions</li>
+						
 					</ul>
 				</div>
 				     <div class="social-media">
