--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header id="header">
     <div class="container">
       <nav>
-        <img src="/Portfolio /images/Screenshot_20250328-184708_1.png" alt="Logo" />
+        <img src="../images/Screenshot_20250328-184708_1.png" alt="Logo" />
         <i class="fa-solid fa-bars" id="fa-ba" onclick="opennav()"></i>
         <ul id="navmenu">
         	<i class="fa-solid fa-regular fa-xmark" id="fa-xma" onclick="closenav()"></i>
@@ -40,7 +40,7 @@
     <div class="container">
     	<div class="row">
 			<div class="col-1">
-				<img src="/Portfolio /images/IMG_20250310_140631_1.jpg" alt="About Me Image" />
+				<img src="../images/IMG_20250310_140631_1.jpg" alt="About Me Image" />
 			</div>
 			<div class="col-2">
 				<h1>About Me</h1>
@@ -70,7 +70,7 @@
 					<ul>
 						<li><span>Front-end Development </span> <br /> Proficient in creating website layouts, styling elements, and adding interactive features.</li>
 						<li><span>Version Control (Git and GitHub)</span> <br />Proficiency in Git for managing code changes and collaborating with teams.</li>
-						<li><span>Responsive Web Design</span>/> <br /> This ensure websites function seamlessly across various devices.</li>
+						<li><span>Responsive Web Design</span> <br /> This ensure websites function seamlessly across various devices.</li>
 						<li><span>Front-end Frameworks </span> Frameworks like React, Angular are valuable for building complex user interfaces.</li>
 						<li><span>Problem Solving</span><br/> The ability to analyze problems, and create effective solutions</li>
 						
@@ -126,7 +126,7 @@
   		<h1>My Work</h1>
   		<div class="work-list">
   			<div class="work">
-  				<img src="/Portfolio /images/a6f064a579898322c98047e832e55a4b_1.jpg" />
+  				<img src="../images/a6f064a579898322c98047e832e55a4b_1.jpg" />
   				<div class="layer">
 					<h3>Weather Now</h3>
 					<p>
@@ -136,7 +136,7 @@
 				</div>
   			</div>
   			<div class="work">
-  				<img src="/Portfolio /images/e1faa947ccd20889aed2d8797ccb3f6c_1.jpg" />
+  				<img src="../images/e1faa947ccd20889aed2d8797ccb3f6c_1.jpg" />
   				<div class="layer">
 					<h3>Trends Furniture</h3>
 					<p>
@@ -146,7 +146,7 @@
 				</div>
   			</div>
   			<div class="work">
-				<img src="/Portfolio /images/992c9276e692162b471b507b6dea8364_1.jpg" />
+				<img src="../images/992c9276e692162b471b507b6dea8364_1.jpg" />
 				<div class="layer">
 		  			<h3>Maverick Cafe</h3>
 		  			<p>
